--- a/todo
+++ b/todo
@@ -1,12 +1,20 @@
-TODO Prevent user to create an account when already connected.
-TODO Prevent user to create an new advert when one is already created.
-TODO Use the pluralize method.
-TODO Add validation to properties, adverts, images.
-TODO Create the about page.
+
 TODO Remove the user field from advert creation.
-TODO Prevent user to create an advert without property. (Advert : Content, price and n° of beds).
-TODO Add the property creator to the navbar (same as advert).
+TODO Remove the user field from property creation.
+
 TODO Property creator (with quick search for current properties or roomates).
+
 TODO Allow an user to leave a property.
 TODO A property must be destroyed if nobody live here.
+
+TODO Add validation to properties, adverts, images.
+
+TODO Prevent user to create an advert without property. (Advert : Content, price and n° of beds).
+
+TODO Prevent users to create an new advert when one is currently referring to their property.
+TODO Prevent user to create an account when already connected.
+
+
+
+TODO Create the about page.
 TODO Layouts (properties and adverts).
