Properties and adverts are now automatically linked together whitout select boxes. Deletetion of an property erase the property_id attribute of the people who lived here. README.rdoc updated.

--- a/README.rdoc
+++ b/README.rdoc
@@ -6,20 +6,20 @@ This web application is a network which make easier the sharing of accommodation
 
 == Functionalities
 
-Visitors can search for users, properties or adverts, but they can see the details of the adverts only.
+Visitors can search for users, properties or adverts, but they can only see the details of the adverts.
 In order to display users' profile and the details of a property, they must be registered.
 
 Once registered, the users can add their property, by creating a new one, or by searching for a existing (in the case of the property has already been created on the website).
-Once the property linked to the users' profile, if an advert is currently referring to this property they can edit or delete it. Or they can create a new one in the case of no adverts are already existing.
+Once the property linked to the users' profile, the users can create a new advert, in the case of no adverts are already existing. If an advert is already referring to their property, they can edit or delete the existing one.
 
-Any user living in a preperty can so edit or delete the referring advert.
-If a property doesn't have user linving inside anymore, the property is removed from the website.
+Any user living in a property can so edit or delete the referring advert.
+If a property doesn't have user living inside anymore, the property is removed from the website.
 
 = Installation
 Some information in the config file are missing in order to keep my data private.
 - The config/environments/development.rb file has to be filled with your email credentials.
 
-== Predefined accounts
+= Predefined accounts
 Only an admin account can add an other admin by adding the rights to an user.
 For the convenience of tests, two special have been created.
 - Admin account :
@@ -29,11 +29,11 @@ For the convenience of tests, two special have been created.
     mail : user@mail.ie
     password : user
 
-== Entities Relationship
- An user is living in one property and can create one advert linked to this property.
+= Entities Relationship
+An user is living in one property and can create one advert linked to this property.
 
- An advert is created by one user, is referring to one property and has many pictures.
+An advert is created by one user, is referring to one property and has many pictures.
 
- A property can be shared with many users but can not have more than one advert.
+A property can be shared with many users but can not have more than one advert.
 
- An image is linked to only one advert.
+An image is linked to only one advert.
