Properties, profiles and adverts can only edited by their owner or by an admin

--- a/todo
+++ b/todo
@@ -14,4 +14,4 @@ TODO Prevent user to create an account when already connected.
 
 
 TODO Create the about page.
-TODO Layouts (properties and adverts).
+TODO All remaining layouts.
