Search box for roommates when adding a property added. Existing properties can now be linked to users. Users can leave a property. If nobody lives in a property, the property is destroyed.

--- a/todo
+++ b/todo
@@ -1,14 +1,10 @@
 TODO All remaining layouts.
 
-TODO Property creator (with quick search for current properties or roomates).
-
-TODO Allow an user to leave a property.
-TODO A property must be destroyed if nobody live here.
-
 TODO add uploader for images
 
-TODO Prevent user to create an advert without property. (Advert : Content, price and n° of beds).
+TODO Add geocoder feature
 
+TODO Prevent user to create an advert without property. (Advert : Content, price and n° of beds).
 TODO Prevent users to create an new advert when one is currently referring to their property.
 TODO Prevent user to create an account when already connected.
 
